MicroserviceEcommerce K8S/ecommerceuserservice-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerceuserservice-srv
spec:
  type: NodePort
  selector:
    app: ecommerceuserservice
  ports:
    - name: ecommerceuserservice
      protocol: TCP
      port: 8080
      targetPort: 8080
